# kcm_imaupdate

./: CMakeLists.txt
src/: CMakeLists.txt  imaupdatesettings.cpp  imaupdatesettings.h  kcm_imaupdate.json  qml.qrc
src/ui/: main.qml
